fixed overlapping div on large screen

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body::-webkit-scrollbar {
   }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1500px) {
   .banner.container .text {
     color: #000000; /*set color*/
     position: relative;
@@ -259,7 +259,7 @@ img {
 /* collections column */
 .column.collections {
   width: 100%;
-  height: 80vh;
+  height: 90vh;
   background-color: #f1f1f1;
 }
 
@@ -288,6 +288,12 @@ a {
     left: 15%;
     width: 70%;
     height: 80%;
+  }
+
+  .column.collections {
+    width: 100%;
+    height: 80vh;
+    background-color: #f1f1f1;
   }
 }
 
